--- a/pokedex/Base.lproj/Main.storyboard
+++ b/pokedex/Base.lproj/Main.storyboard
@@ -16,12 +16,67 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg" translatesAutoresizingMaskIntoConstraints="NO" id="T5M-xb-5xc">
+                                <rect key="frame" x="0.0" y="55" width="600" height="545"/>
+                            </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aXy-IE-T84">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="55"/>
+                                <color key="backgroundColor" red="1" green="0.34509803921568627" blue="0.33333333333333331" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="55" id="Iun-B4-BWo"/>
+                                </constraints>
+                            </view>
+                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="cvd-DK-X30">
+                                <rect key="frame" x="0.0" y="55" width="600" height="44"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="ic9-jj-HzO">
+                                <rect key="frame" x="20" y="119" width="560" height="461"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="noz-eN-DKO">
+                                    <size key="itemSize" width="50" height="50"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="cgn-6I-HPN">
+                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        </view>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="cvd-DK-X30" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="DQ3-Ij-fTW"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="T5M-xb-5xc" secondAttribute="bottom" id="KoO-OT-eJa"/>
+                            <constraint firstItem="cvd-DK-X30" firstAttribute="top" secondItem="aXy-IE-T84" secondAttribute="bottom" id="Lic-oM-dRi"/>
+                            <constraint firstItem="ic9-jj-HzO" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="20" id="YFp-Fv-dWs"/>
+                            <constraint firstItem="aXy-IE-T84" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="aFU-R2-S9S"/>
+                            <constraint firstAttribute="trailing" secondItem="aXy-IE-T84" secondAttribute="trailing" id="dyM-ca-SSt"/>
+                            <constraint firstItem="ic9-jj-HzO" firstAttribute="top" secondItem="cvd-DK-X30" secondAttribute="bottom" constant="20" id="feJ-sp-Aks"/>
+                            <constraint firstAttribute="trailing" secondItem="cvd-DK-X30" secondAttribute="trailing" id="hWY-CF-dja"/>
+                            <constraint firstItem="aXy-IE-T84" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="oHi-C4-NSu"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="ic9-jj-HzO" secondAttribute="bottom" constant="20" id="oeu-Mv-w2q"/>
+                            <constraint firstItem="T5M-xb-5xc" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="pUi-I3-VtT"/>
+                            <constraint firstAttribute="trailing" secondItem="ic9-jj-HzO" secondAttribute="trailing" constant="20" id="pd7-Ue-uV6"/>
+                            <constraint firstAttribute="trailing" secondItem="T5M-xb-5xc" secondAttribute="trailing" id="sPe-9q-GJj"/>
+                            <constraint firstItem="T5M-xb-5xc" firstAttribute="top" secondItem="aXy-IE-T84" secondAttribute="bottom" id="tw1-Ms-qgw"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="482" y="366"/>
+            <point key="canvasLocation" x="432" y="359"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="bg" width="1920" height="1200"/>
+    </resources>
 </document>
